tests/_resources/error_gcns/syntax_empty_lagrange.expected
error[E001]: Missing semicolon. Found ''C''
  --> syntax_empty_lagrange.gcn:6:9
     |
   4 |     constraints
   5 |     {
   6 |         C[] + I[] = Y[] : ;
     |         ^ missing semicolon
   7 |     };
   8 | };
     |
   = note: Add ';' at the end of the statement
   = note: Check that each equation ends with ';'
   = note: Check that each block component ends with '};'
