tests/_resources/error_gcns/syntax_empty_lagrange.gcn
# Error: Colon not followed by multiplier name
block HOUSEHOLD
{
    constraints
    {
        C[] + I[] = Y[] : ;
    };
};
